#
# 아래는 kts 원본에 있던 설명이다
# wkpark@kldp.org에 의하여 automake화 되었으므로 Makefile이 간소화 되었으며
# 아래의 내용과 맞지 않는 부분도 있으나, 원래 설명은 그대로 둔다. 
# ---- 이하 이상호님의 설명 ---
# Makefile for Korean-Tagging-System(KTS)
#
# Sangho Lee
#
# jhlee@csone.kaist.ac.kr, shlee2@adam.kaist.ac.kr
#
#
# libkts.a와 libktspl.a를 만들고,
# 사전 화일 kts_dict를 만든다.
#
# 예제 프로그램은 ktsdemo, ktsdemo2이다.
#
#    다음의 Semantic에 관련된 사전은 kts.tar에 없다.
#
#       putmarker Semantic/dict.marker kts_dict
#       putsem Semantic/dict.semNEC kts_dict
# --- 설명 끝 ---
EXTRA_DIST = README.kts
SUBDIRS = src dict tools misc misc/Evaluation misc/GetLEXFEATURE misc/GetUNKNOWNFREQ
