dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/kts.c)
AM_CONFIG_HEADER(config.h)
#AC_PREREQ(2.13)
AM_INIT_AUTOMAKE(kts, 1.0)

dnl this is actually major.minor ...
#PKG_MAJOR="`cat $srcdir/VERSION`"
#PATCHLEVEL="`cat $srcdir/PATCHLEVEL`"
#AM_INIT_AUTOMAKE(kts, $PKG_MAJOR.$PATCHLEVEL)

dnl Set of available languages.
#ALL_LINGUAS="de fr es ko nl no pl pt sl sv"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_ISC_POSIX

dnl Checks for libraries.

dnl Checks for header files.
#AC_STDC_HEADERS
AC_HAVE_HEADERS(ndbm.h)
AC_HAVE_HEADERS(db.h)
AC_HAVE_HEADERS(db3/db.h)
AC_HAVE_HEADERS(db4/db.h)

dnl Checks for library functions.
#AC_FUNC_ALLOCA

dnl Check for st_blksize in struct stat
#AC_ST_BLKSIZE

#dnl internationalization macros
#AM_GNU_GETTEXT
AC_OUTPUT([Makefile src/Makefile dict/Makefile tools/Makefile misc/Makefile misc/Evaluation/Makefile misc/GetLEXFEATURE/Makefile misc/GetUNKNOWNFREQ/Makefile ],
    [])
#   [chmod +x src/hello])

